# Intern_Tasks

Dynamic/: Makefile  lib_rev.c
Gstreamer/: Playbinspeed.c  README  dplv.c  dplvs.c  dynamicpl.c  gs1.c  gs2.c  gsgraph.c  manualspeed.c
Makefilepractice/: Makefile  Palindrome.c  README  dec.c  method.c  program
Makefilepractice/Dynamic/: Palindrome.c  lib_palindrome.c  program
Makefilepractice/Static/: Makefile  Palindrome.c  lib_palindrome.h  lib_rev.c  lib_rev.h
Static/: lib_file  lib_palindrome.c  program
jiraautomation/: README  apicall.py  apicall1.py  readme.md
rdkservice/Addition/: Addition.conf.in  Addition.config  Addition.cpp  Addition.json  AdditionPlugin.json  CMakeLists.txt  Module.h
rdkservice/Demo/: CMakeLists.txt  Demo.cpp  Demo.json  DemoImplementation.h  DemoPlugin.json  IDemo  IDemo.h  Module.h
rdkservice/GPlaybin/: GPlaybin.config  GPlaybin.cpp  GPlaybinImplementation.cpp  GPlaybinPlugin.json  IGPlaybin.h  Module.h
rdkservice/GstPlugin/: Module.h  lib.cpp  lib.h
rdkservice/UserInfo/: IUserInfo  IUserInfo.h  README.md  UserInfo.cpp  UserInfo.h  UserInfo.json  UserInfoImplementation.cpp  UserInfoImplementation.h
rdkservice/inprocess/: README
rdkservice/inprocess/Addition/: Addition.h
rdkservice/inprocess/UserInfo/: CMakeLists.txt  Module.h  UserInfo.conf.in  UserInfo.config  UserInfoPlugin.json
rdkservice/outofprocess/: README
rdkservice/outofprocess/Demo/: Demo.conf.in  Demo.config  Demo.h  DemoImplementation.cpp
rdkservice/outofprocess/GPlaybin/: CMakeLists.txt  GPlaybin.conf.in  GPlaybin.h  GPlaybin.json  GPlaybinImplementation.h  IGPlaybin
rdkservice/outofprocess/GstPlugin/: CMakeLists.txt  GstPlugin.conf  GstPlugin.conf.in  GstPlugin.cpp  GstPlugin.h  Module.cpp
recipes-application/: README  meta-rdk-comcast.patch  meta-rdk-video.patch  packagegroup-cpc-mediaclient.bb
recipes-application/addition/: add.bb
recipes-application/addition/files/: add.c
recipes-application/calculator/: calc.bb
recipes-application/calculator/files/: calc.c
recipes-application/gstapp/: gstrecipe.bb
recipes-application/gstapp/files/: gstrecipe.c
